RESOLVED FIXED268619
[GTK][WPE] REGRESSION(273985@main): Undefined reference to 'shm_open' and 'shm_unlink'
https://bugs.webkit.org/show_bug.cgi?id=268619
Summary [GTK][WPE] REGRESSION(273985@main): Undefined reference to 'shm_open' and 'sh...
Diego Pino
Reported 2024-02-02 05:45:47 PST
After 273951@main, bots started to fail with the following linking error: https://build.webkit.org/#/builders/596/builds/17082 ``` FAILED: bin/TestWebKitAPI/TestWebCore : && /bin/g++-10 -fdiagnostics-color=always -Wextra -Wall -pipe -fmax-errors=20 -Wno-odr -Wno-stringop-overflow -Wno-nonnull -Wno-array-bounds -Wno-expansion-to-defined -Wno-noexcept-type -Wno-uninitialized -Wno-psabi -Wno-misleading-indentation -Wno-maybe-uninitialized -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-tautological-compare -fno-strict-aliasing -fno-exceptions -fno-rtti -O3 -DNDEBUG -L/home/buildbot/worker/WPE-Linux-64-bit-Release-Ubuntu-2004-Build/build/WebKitBuild/DependenciesWPE/Root/lib -Wl,--disable-new-dtags @CMakeFiles/TestWebCore.rsp -o bin/TestWebKitAPI/TestWebCore && : Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-76.cpp.o:UnifiedSource-3c72abbe-76.cpp:function WebCore::SharedMemory::allocate(unsigned long): error: undefined reference to 'shm_open' Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-76.cpp.o:UnifiedSource-3c72abbe-76.cpp:function WebCore::SharedMemory::allocate(unsigned long): error: undefined reference to 'shm_unlink' collect2: error: ld returned 1 exit status ``` The linker cannot resolve references to 'shm_open' and 'shm_unlink' which are defined in librt.
Attachments
Diego Pino
Comment 1 2024-02-02 05:48:33 PST
Michael Catanzaro
Comment 2 2024-02-02 11:56:39 PST
*** Bug 268626 has been marked as a duplicate of this bug. ***
Adrian Perez
Comment 3 2024-02-03 05:31:29 PST
Closing, the patch from https://github.com/WebKit/WebKit/pull/23746 was enough in the end.
Note You need to log in before you can comment on or make changes to this bug.