[GTK][WPE] Fix undefined reference to 'shm_open' and 'shm_unlink' https://bugs.webkit.org/show_bug.cgi?id=268619

Reviewed by NOBODY (OOPS!).

Library 'rt' is missing in several targets.

* Source/WebKit/UIProcess/wpe/AcceleratedBackingStoreDMABuf.cpp:
(WebKit::AcceleratedBackingStoreDMABuf::didCreateBufferSHM):
* Source/WebKit/WPEPlatform/CMakeLists.txt:
* Tools/TestWebKitAPI/PlatformGTK.cmake:
* Tools/TestWebKitAPI/PlatformWPE.cmake: