Tools/TestWebKitAPI/PlatformWPE.cmake
@@ -51,6 +51,10 @@ list(APPEND TestWebCore_SYSTEM_INCLUDE_DIRECTORIES
     ${LIBSOUP_INCLUDE_DIRS}
 )
 
+list(APPEND TestWebCore_LIBRARIES
+    rt
+)
+
 # TestWebKit
 list(APPEND TestWebKit_SOURCES
     ${test_main_SOURCES}
